--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Goethe, Johann Wolfgang von, 1749-1832'
+- GITenberg
 title: 'Goethe: Een Levensbeschrijving'
 url: http://www.gutenberg.org/ebooks/29216
